@@ -1,0 +1,6 @@
+
+### check potential coding problems via `codetools'
+if (require("codetools")) {
+    library("party")
+    print(checkUsagePackage("party"))
+}
